tests/paczka1/small_fuzzy/66509893.err
Error in line 5: BT4Nb0 S969 2,0
Error in line 7: BT4Nb0 A706 31,3
Error in line 8: BT4Nb0 A611 85,0
Error in line 9: BT4Nb0 A211 3,0
Error in line 4: g0hFknQhD A706 29,1
